[package]
name = "heoram"
version = "0.2.0"
edition = "2021"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

[profile.test]
lto = "fat"
codegen-units = 1
opt-level = 3

[profile.dev]
lto = "fat"
codegen-units = 1
opt-level = 3
debug = true

[dependencies]
csv = "1.1.6"
rand = "0.8.5"
serde_json = "1.0.91"
serde = { version = "1.0.151", features = ["derive"] }
clap = { version = "4.0.29", features = ["derive"] }
rayon = "1.6.1"
bitvec = "1.0.1"
dyn-stack = "0.8.3"

[target.'cfg(target_arch = "x86_64")'.dependencies]
concrete-core = { version = "1.0.2", features = ["x86_64", "__private_docs"] }
concrete-csprng = { version = "0.2.2", features = ["x86_64"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
concrete-core = { version = "1.0.2", features = ["aarch64", "__private_docs"] }
concrete-csprng = { version = "0.2.2", features = ["aarch64"] }


[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "my_benchmark"
harness = false
