[package]
name = "panacea"
version = "0.2.0"
edition = "2021"
rust-version = "1.68.0"
repository = "https://github.com/KULeuven-COSIC/Panacea"
license = "MIT"
readme = "README.md"
authors = ["Kelong Cong <kelong.cong@esat.kuleuven.be>", "Georgio Nicolas <georgio.nicolas@esat.kuleuven.be>"]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

[profile.test]
lto = "fat"
codegen-units = 1
opt-level = 3

[dependencies]
csv = "1.2.0"
rand = "0.8.5"
serde_json = "1.0.93"
serde = { version = "1.0.152", features = ["derive"] }
clap = { version = "4.1.6", features = ["derive"] }
rayon = "1.6.1"
bitvec = "1.0.1"
dyn-stack = "0.8.3"

[target.'cfg(target_arch = "x86_64")'.dependencies]
concrete-core = { version = "1.0.2", features = ["x86_64", "__private_docs"] }
concrete-csprng = { version = "0.2.2", features = ["x86_64"] }

[target.'cfg(target_arch = "aarch64")'.dependencies]
concrete-core = { version = "1.0.2", features = ["aarch64", "__private_docs"] }
concrete-csprng = { version = "0.2.2", features = ["aarch64"] }


[dev-dependencies]
criterion = "0.4.0"

[[bench]]
name = "my_benchmark"
harness = false
