[package]
name = "panacea"
version = "0.3.0"
edition = "2021"
rust-version = "1.75.0"
repository = "https://github.com/KULeuven-COSIC/Panacea"
license = "MIT"
readme = "README.md"
authors = ["Kelong Cong <kelong.cong@esat.kuleuven.be>", "Georgio Nicolas <georgio.nicolas@esat.kuleuven.be>"]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3

# [profile.test]
# lto = "fat"
# codegen-units = 1
# opt-level = 3

[dependencies]
csv = "1.3.0"
rand = "0.8.5"
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["derive"] }
clap = { version = "4.5.1", features = ["derive"] }
rayon = "1.9.0"
bitvec = "1.0.1"
dyn-stack = "0.9.1"
concrete-fft = "0.4.1"
aligned-vec = { version = "0.5.0", features = ["serde"] }

[target.'cfg(all(target_arch = "aarch64", unix))'.dependencies]
tfhe = { version = "0.5.3", features = ["aarch64-unix"] }
[target.'cfg(all(target_arch = "x86_64", unix))'.dependencies]
tfhe = { version = "0.5.3", features = ["x86_64-unix"] }
[target.'cfg(all(target_arch = "x86_64", windows))'.dependencies]
tfhe = { version = "0.5.3", features = ["x86_64"] }



[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "my_benchmark"
harness = false
